--- a/YDev.Web/Views/Shared/_Layout.cshtml
+++ b/YDev.Web/Views/Shared/_Layout.cshtml
@@ -45,105 +45,7 @@
     <div class="pageWrapper">
 
         <!-- Header Start -->
-        <div id="headWrapper" class="clearfix">
-
-            <!-- top bar start -->
-            <div class="top-bar">
-                <div class="container">
-                    <div class="row">
-                        <div class="cell-5">
-                            <ul>
-                                <li><span>Hayal nereye İhtiyaç Oraya...</span></li>
-                            </ul>
-                        </div>
-                        <div class="cell-7 right-bar">
-                            <ul class="right">
-
-                                <li><a href="#"><i class="fa fa-envelope"></i>bilgi@ihtiyacevim.com.tr</a></li>
-                                <li><span><i class="fa fa-phone"></i>Bizi Arayın: +90 0542 524 20 90 </span></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- top bar end -->
-            <!-- Logo, global navigation menu and search start -->
-            <header class="top-head" data-sticky="true">
-                <div class="container">
-                    <div class="row">
-                        <div class="logo cell-3">
-                            <a href="/"></a>
-                        </div>
-                        <div class="cell-9 top-menu">
-
-                            <!-- top navigation menu start -->
-                            <nav class="top-nav">
-                                <ul>
-                                    @foreach (var item in menuObject)
-                                    {
-                                        <li>
-
-                                            @if (item.Children != null)
-                                            {
-                                                <a href="#"><span>@categories.FirstOrDefault(f => f.Id == item.Id).Name</span></a>
-                                                <ul>
-                                                    @foreach (var subItem in item.Children)
-                                                    {
-                                                        <li>
-
-                                                            @if (subItem.Children != null)
-                                                            {
-                                                                <a href="#">@categories.FirstOrDefault(f => f.Id == subItem.Id).Name</a>
-                                                                <ul>
-                                                                    @foreach (var subItem1 in subItem.Children)
-                                                                    {
-                                                                        <li>
-                                                                            <a href="@categories.FirstOrDefault(f => f.Id == subItem1.Id).Link">@categories.FirstOrDefault(f => f.Id == subItem1.Id).Name</a>
-                                                                        </li>
-                                                                    }
-                                                                </ul>
-                                                            }
-                                                            else
-                                                            {
-                                                                <a href="@categories.FirstOrDefault(f => f.Id == subItem.Id).Link">@categories.FirstOrDefault(f => f.Id == subItem.Id).Name</a>
-                                                            }
-
-                                                        </li>
-                                                    }
-                                                </ul>
-                                            }
-                                            else
-                                            {
-                                                <a href="@categories.FirstOrDefault(f => f.Id == item.Id).Link"><span>@categories.FirstOrDefault(f => f.Id == item.Id).Name</span></a>
-                                            }
-
-                                        </li>
-
-                                    }
-
-                                </ul>
-                            </nav>
-                            <!-- top navigation menu end -->
-                            <!-- top search start -->
-                            <div class="top-search">
-                                <a href="#"><span class="fa fa-search"></span></a>
-                                <div class="search-box">
-                                    <div class="input-box left">
-                                        <input type="text" name="t" id="t-search" class="txt-box" placeHolder="Enter search keyword here..." />
-                                    </div>
-                                    <div class="left">
-                                        <input type="submit" id="b-search" class="btn main-bg" value="GO" />
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- top search end -->
-                        </div>
-                    </div>
-                </div>
-            </header>
-            <!-- Logo, Global navigation menu and search end -->
-
-        </div>
+        @await Component.InvokeAsync("HeaderComponent")
         <!-- Header End -->
         <!-- Content Start -->
         @RenderBody()
