--- a/YDev.Web/Views/Shared/_Layout.cshtml
+++ b/YDev.Web/Views/Shared/_Layout.cshtml
@@ -95,7 +95,10 @@
     <!-- NiceScroll plugin -->
     <script type="text/javascript" src="js/jquery.nicescroll.min.js"></script>
 
+    <script type="text/javascript" src="js/contact.js"></script>
+
     <!-- general script file -->
     <script type="text/javascript" src="js/script.js"></script>
+
 </body>
 </html>
