--- a/YDev.Web/Views/Shared/_Layout.cshtml
+++ b/YDev.Web/Views/Shared/_Layout.cshtml
@@ -20,18 +20,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- Put favicon.ico and apple-touch-icon(s).png in the images folder -->
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
 
     <!-- CSS StyleSheets -->
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800&amp;amp;subset=latin,latin-ext">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/prettyPhoto.css">
-    <link rel="stylesheet" href="css/slick.css">
-    <link rel="stylesheet" href="rs-plugin/css/settings.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/default.css">
+    <link rel="stylesheet" href="~/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/css/animate.css">
+    <link rel="stylesheet" href="~/css/prettyPhoto.css">
+    <link rel="stylesheet" href="~/css/slick.css">
+    <link rel="stylesheet" href="~/rs-plugin/css/settings.css">
+    <link rel="stylesheet" href="~/css/style.css">
+    <link rel="stylesheet" href="~/css/responsive.css">
+    <link rel="stylesheet" href="~/css/default.css">
 
 </head>
 <body>
@@ -59,46 +59,46 @@
     </div>
 
     <!-- Load JS siles -->
-    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="~/js/jquery.min.js"></script>
 
     <!-- Waypoints script -->
-    <script type="text/javascript" src="js/waypoints.min.js"></script>
+    <script type="text/javascript" src="~/js/waypoints.min.js"></script>
 
     <!-- SLIDER REVOLUTION SCRIPTS  -->
-    <script type="text/javascript" src="rs-plugin/js/jquery.themepunch.tools.min.js"></script>
-    <script type="text/javascript" src="rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+    <script type="text/javascript" src="~/rs-plugin/js/jquery.themepunch.tools.min.js"></script>
+    <script type="text/javascript" src="~/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
 
     <!-- Animate numbers increment -->
-    <script type="text/javascript" src="js/jquery.animateNumber.min.js"></script>
+    <script type="text/javascript" src="~/js/jquery.animateNumber.min.js"></script>
 
     <!-- slick slider carousel -->
-    <script type="text/javascript" src="js/slick.min.js"></script>
+    <script type="text/javascript" src="~/js/slick.min.js"></script>
 
     <!-- Animate numbers increment -->
-    <script type="text/javascript" src="js/jquery.easypiechart.min.js"></script>
+    <script type="text/javascript" src="~/js/jquery.easypiechart.min.js"></script>
 
     <!-- PrettyPhoto script -->
-    <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script>
+    <script type="text/javascript" src="~/js/jquery.prettyPhoto.js"></script>
 
     <!-- Share post plugin script -->
-    <script type="text/javascript" src="js/jquery.sharrre.min.js"></script>
+    <script type="text/javascript" src="~/js/jquery.sharrre.min.js"></script>
 
     <!-- Product images zoom plugin -->
-    <script type="text/javascript" src="js/jquery.elevateZoom-3.0.8.min.js"></script>
+    <script type="text/javascript" src="~/js/jquery.elevateZoom-3.0.8.min.js"></script>
 
     <!-- Input placeholder plugin -->
-    <script type="text/javascript" src="js/jquery.placeholder.js"></script>
+    <script type="text/javascript" src="~/js/jquery.placeholder.js"></script>
 
     <!-- MailChimp plugin -->
-    <script type="text/javascript" src="js/mailChimp.js"></script>
+    <script type="text/javascript" src="~/js/mailChimp.js"></script>
 
     <!-- NiceScroll plugin -->
-    <script type="text/javascript" src="js/jquery.nicescroll.min.js"></script>
+    <script type="text/javascript" src="~/js/jquery.nicescroll.min.js"></script>
 
-    <script type="text/javascript" src="js/contact.js"></script>
+    <script type="text/javascript" src="~/js/contact.js"></script>
 
     <!-- general script file -->
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="~/js/script.js"></script>
 
 </body>
 </html>
