--- a/YDev.Admin/Views/MediaYonetim/ResimVideo.cshtml
+++ b/YDev.Admin/Views/MediaYonetim/ResimVideo.cshtml
@@ -47,7 +47,7 @@
                                                     <span class="input-group-addon btn default btn-file">
                                                         <span class="fileinput-new"> Gözat</span>
                                                         <span class="fileinput-exists"> Değiştir </span>
-                                                        <input type="file" accept="image/*|video/*" id="select_file" name="...">
+                                                        <input type="file" accept="image/*" id="select_file" name="...">
                                                     </span>
                                                     <a href="javascript:;" class="input-group-addon btn red fileinput-exists" data-dismiss="fileinput"> Kaldır </a>
                                                 </div>
@@ -84,9 +84,9 @@
                                     </div>
                                     <div id="links">
 
-                                        @if (@Model.Files != null && @Model.Files.Length != 0)
+                                        @if (Model.Files != null && Model.Files.Length != 0)
                                         {
-                                            foreach (ViewDataUploadFilesResult file in @Model.Files)
+                                            foreach (ViewDataUploadFilesResult file in Model.Files)
                                             {
 
                                                 if (file.type.Equals("video/mp4"))
@@ -95,7 +95,7 @@
                                                         <a href="@file.url" title="@file.name" type="video/mp4">
                                                             <img src="@file.thumbnailUrl" alt="@file.name">
                                                         </a>
-                                                        <div class="col-xs-12 text-center">@file.name</div>
+                                                        <div class="col-xs-12 text-center">@file.name (@file.widthHeight)</div>
                                                         <div class="col-xs-12 text-center"><input type="checkbox" data-id="@file.name" class="toggle file-delete"></div>
                                                     </div>
                                                 }
@@ -105,7 +105,7 @@
                                                         <a href="@file.url" title="@file.name">
                                                             <img src="@file.thumbnailUrl" alt="@file.name">
                                                         </a>
-                                                        <div class="col-xs-12 text-center">@file.name</div>
+                                                        <div class="col-xs-12 text-center">@file.name (@file.widthHeight)</div>
                                                         <div class="col-xs-12 text-center"><input type="checkbox" data-id="@file.name" class="toggle file-delete"></div>
                                                     </div>
                                                 }
