--- a/YDev.Web/wwwroot/css/style.css
+++ b/YDev.Web/wwwroot/css/style.css
@@ -553,7 +553,7 @@ header.top-head .logo.center a{
 }*/
 .top-nav > ul li ul {
 	position: absolute;
-	top: 92px;
+	top: 85px;
 	z-index: -1;
 	min-width: 180px;
     height:0;
@@ -1469,7 +1469,7 @@ button, .btn, .fun-title, .r-more {
 	display: block;
 }
 .sectionWrapper {
-	padding: 80px 0;
+	padding: 40px 0;
 }
 .page-section,.scroll-section{
     padding:140px 0
@@ -2379,16 +2379,15 @@ blockquote span {
 	display: table;
 	margin: 0 auto 25px;
 	margin-top: -45px;
-	width: 90px;
-	height: 90px;
-	border: 1px #E6E6E6 solid;
+	width: 100px;
+	height: 100px;
 	border-radius: 50%;
-	background-color: #F0F0F0;
+	background-color: #dcae73;
 	box-shadow: inset 0 0 0 3px #fff;
-	color: #B3B3B3;
+	color: #66000b;
 	text-align: center;
 	font-size: 38px;
-	line-height: 90px;
+	line-height: 100px;
 	-moz-transition: all 300ms linear;
 	-o-transition: all 300ms linear;
 	-webkit-transition: all 300ms linear;
@@ -2400,7 +2399,7 @@ blockquote span {
 	display: table;
 	margin: 15px auto 0;
 	padding: 8px 15px;
-	background: #ECECEC;
+	background: #dcae73;
 	-moz-transition: all 300ms linear;
 	-o-transition: all 300ms linear;
 	-webkit-transition: all 300ms linear;
@@ -3283,7 +3282,8 @@ button.skew-25 i {
 	width: 100%;
 }
 .tabs > ul {
-	margin-left: 5px;
+	margin:auto;
+	display:table;
 }
 .tabs > ul:after {
 	display: block;
@@ -3297,17 +3297,17 @@ button.skew-25 i {
 	color: #6c6c6c;
 }
 .tabs > ul li a {
-	color: #6c6c6c;
-	text-transform: uppercase;
+	text-transform: capitalize;
 	display: block;
 	padding: 6px 15px;
+	font-size:20px;
 }
 .tabs > ul li a i {
 	margin-right: 8px;
 	color: #333;
 }
 .tabs > ul li:hover a, .tabs > ul li.active a {
-	color: #fff;
+	color: #66000b;
 }
 .tabs-pane {
 	padding: 15px;
@@ -4261,6 +4261,7 @@ button.skew-25 i {
 }
 .blog-thumbs.no-bar .post-image {
 	max-height: 177px;
+	max-width: 300px; 
 }
 .blog-thumbs .post-item {
 	float: none;
